返り値の型をintからfloatに修正

--- a/kadai_013/kadai_013.ipynb
+++ b/kadai_013/kadai_013.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "ew611ULgj8eb"
       },
       "outputs": [],
       "source": [
-        "def add_tax(price: int, tax: float) -> int:\n",
+        "def add_tax(price: int, tax: float) -> float:\n",
         "  return price + price * tax"
       ]
     },
@@ -36,9 +36,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "grxlnz15yyC1",
-        "outputId": "2a453dbb-8eca-4b03-fa58-52ebe5a870a7"
+        "outputId": "9d66320a-e057-4d90-84bc-b227d8a4ecf6"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
